<resources>
    <string name="app_name">New Orleans List</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Phrases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family Members</string>

    <!-- Vocabulary word for the color red [CHAR LIMIT=20] -->
    <string name="color_red">red</string>

    <!-- Vocabulary word for the color dusty yellow [CHAR LIMIT=20] -->
    <string name="color_dusty_yellow">dusty yellow</string>

    <!-- Vocabulary word for the color mustard yellow [CHAR LIMIT=20] -->
    <string name="color_mustard_yellow">mustard yellow</string>

    <!-- Vocabulary word for the color green [CHAR LIMIT=20] -->
    <string name="color_green">green</string>

    <!-- Vocabulary word for the color brown [CHAR LIMIT=20] -->
    <string name="color_brown">brown</string>

    <!-- Vocabulary word for the color black [CHAR LIMIT=20] -->
    <string name="color_black">black</string>

    <!-- Vocabulary word for the color gray [CHAR LIMIT=20] -->
    <string name="color_gray">gray</string>

    <!-- Vocabulary word for the color white [CHAR LIMIT=20] -->
    <string name="color_white">white</string>

    <!-- Vocabulary word for the number one [CHAR LIMIT=20] -->
    <string name="number_one">one</string>

    <!-- Vocabulary word for the number two [CHAR LIMIT=20] -->
    <string name="number_two">two</string>

    <!-- Vocabulary word for the number three [CHAR LIMIT=20] -->
    <string name="number_three">three</string>

    <!-- Vocabulary word for the number four [CHAR LIMIT=20] -->
    <string name="number_four">four</string>

    <!-- Vocabulary word for the number five [CHAR LIMIT=20] -->
    <string name="number_five">five</string>

    <!-- Vocabulary word for the number six [CHAR LIMIT=20] -->
    <string name="number_six">six</string>

    <!-- Vocabulary word for the number seven [CHAR LIMIT=20] -->
    <string name="number_seven">seven</string>

    <!-- Vocabulary word for the number eight [CHAR LIMIT=20] -->
    <string name="number_eight">eight</string>

    <!-- Vocabulary word for the number nine [CHAR LIMIT=20] -->
    <string name="number_nine">nine</string>

    <!-- Vocabulary word for the number ten [CHAR LIMIT=20] -->
    <string name="number_ten">ten</string>

    <!-- Vocabulary word for the father family member [CHAR LIMIT=20] -->
    <string name="family_father">father</string>

    <!-- Vocabulary word for the mother family member [CHAR LIMIT=20] -->
    <string name="family_mother">mother</string>

    <!-- Vocabulary word for the son family member [CHAR LIMIT=20] -->
    <string name="family_son">son</string>

    <!-- Vocabulary word for the daughter family member [CHAR LIMIT=20] -->
    <string name="family_daughter">daughter</string>

    <!-- Vocabulary word for the older brother family member [CHAR LIMIT=20] -->
    <string name="family_older_brother">older brother</string>

    <!-- Vocabulary word for the younger brother family member [CHAR LIMIT=20] -->
    <string name="family_younger_brother">younger brother</string>

    <!-- Vocabulary word for the older sister family member [CHAR LIMIT=20] -->
    <string name="family_older_sister">older sister</string>

    <!-- Vocabulary word for the younger sister family member [CHAR LIMIT=20] -->
    <string name="family_younger_sister">younger sister</string>

    <!-- Vocabulary word for the grandmother family member [CHAR LIMIT=20] -->
    <string name="family_grandmother">grandmother</string>

    <!-- Vocabulary word for the grandfather family member [CHAR LIMIT=20] -->
    <string name="family_grandfather">grandfather</string>

    <!-- Vocabulary phrase for "Where are you going?" [CHAR LIMIT=30] -->
    <string name="phrase_where_are_you_going">Where are you going?</string>

    <!-- Vocabulary phrase for "What is your name?" [CHAR LIMIT=20] -->
    <string name="phrase_what_is_your_name">What is your name?</string>

    <!-- Vocabulary phrase for "My name is..." [CHAR LIMIT=20] -->
    <string name="phrase_my_name_is">My name is...</string>

    <!-- Vocabulary phrase for "How are you feeling?" [CHAR LIMIT=20] -->
    <string name="phrase_how_are_you_feeling">How are you feeling?</string>

    <!-- Vocabulary phrase for "I'm feeling good." [CHAR LIMIT=20] -->
    <string name="phrase_im_feeling_good">I\'m feeling good.</string>

    <!-- Vocabulary phrase for "Are you coming?" [CHAR LIMIT=20] -->
    <string name="phrase_are_you_coming">Are you coming?</string>

    <!-- Vocabulary phrase for "Yes, I'm coming." [CHAR LIMIT=20] -->
    <string name="phrase_yes_im_coming">"Yes, I\'m coming."</string>

    <!-- Vocabulary phrase for "I'm coming." [CHAR LIMIT=20] -->
    <string name="phrase_im_coming">I\'m coming.</string>

    <!-- Vocabulary phrase for "Let's go." [CHAR LIMIT=20] -->
    <string name="phrase_lets_go">Let\'s go.</string>

    <!-- Vocabulary phrase for "Come here." [CHAR LIMIT=20] -->
    <string name="phrase_come_here">Come here.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_orleans">New Orleans</string>
    <string name="facts">Facts</string>
    <string name="historical_sites">Historical Sites</string>
    <string name="restaurants">Restaurants</string>
    <string name="events">Events</string>
</resources>
