<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.phillipmixon.neworleanslist.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/new_orleans"
        android:textAlignment="center"
        android:textSize="56sp" />

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/facts_menu_item"
            android:layout_width="match_parent"
            android:background="@color/facts_colors"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/facts"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/historial_menu_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/historical_colors"
            android:padding="12dp"
            android:text="@string/historical_sites"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/restaurants_menu_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@color/restaurants_colors"
            android:text="@string/restaurants"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/events_menu_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@color/events_colors"
            android:text="@string/events"
            android:textAlignment="center"
            android:textSize="48sp" />

    </LinearLayout>

</LinearLayout>